RESOLVED FIXED100367
[EFL][AC] Fix build break when AC is enabled
https://bugs.webkit.org/show_bug.cgi?id=100367
Summary [EFL][AC] Fix build break when AC is enabled
Sudarsana Nagineni (babu)
Reported 2012-10-25 04:22:28 PDT
r132405 broke the build when AC is enabled. /devpoint/old-cairo/WebKit/Source/WebKit2/UIProcess/API/efl/PageViewportControllerClientEfl.cpp: In constructor 'WebKit::PageViewportControllerClientEfl::PageViewportControllerClientEfl(EwkViewImpl*)': /devpoint/old-cairo/WebKit/Source/WebKit2/UIProcess/API/efl/PageViewportControllerClientEfl.cpp:47:8: error: 'm_viewWidget' was not declared in this scope ICECC[10131] 14:09:44: Compiled on 10.237.72.31 make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/API/efl/PageViewportControllerClientEfl.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs....
Attachments
Patch (1.26 KB, patch)
2012-10-25 04:28 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-10-25 04:28:33 PDT
WebKit Review Bot
Comment 2 2012-10-25 05:47:55 PDT
Comment on attachment 170612 [details] Patch Clearing flags on attachment: 170612 Committed r132476: <http://trac.webkit.org/changeset/132476>
WebKit Review Bot
Comment 3 2012-10-25 05:48:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.