[EFL][AC] Fix build break when AC is enabled https://bugs.webkit.org/show_bug.cgi?id=100367

Unreviewed build fix after r132405.

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-25

* UIProcess/API/efl/PageViewportControllerClientEfl.cpp:
(WebKit::PageViewportControllerClientEfl::PageViewportControllerClientEfl):

Canonical link: https://commits.webkit.org/118390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132476 268f45cc-cd09-0410-ab3c-d52691b4dbfc